<resources>
    <string name="access_denied">Access denied</string>
    <string name="add">Add</string>
    <string name="add_location">Add location</string>
    <string name="add_photo">Add photo</string>
    <string name="add_report">Add report</string>
    <string name="and">and</string>
    <string name="app_name">CityDangersAlertApp</string>
    <string name="birth_date">Birth date</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="change_location">Change location</string>
    <string name="change_photo">Change photo</string>
    <string name="choose">Choose</string>
    <string name="colon">&#58;</string>
    <string name="could_not_add_location_to_report">Could not add location to the report</string>
    <string name="could_not_add_report">Could not add the report. Please try again</string>
    <string name="date">Date</string>
    <string name="delete_report">Are you sure you want to delete this report?</string>
    <string name="edit_report">Edit report</string>
    <string name="email">Email</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="email_password_not_valid">Email address and password are not valid</string>
    <string name="email_sent">Email sent</string>
    <string name="first_name">First name</string>
    <string name="forgot_password">Forgot password</string>
    <string name="go_back">Go back</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="input_should_not_be_empty">%s should not be empty</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="login_here">Login here</string>
    <string name="logout">Log out</string>
    <string name="minimum_characters">%s should have at least %d characters</string>
    <string name="my_reports">My reports</string>
    <string name="names">Names</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nearby_dangers">Nearby dangers</string>
    <string name="no_changes_have_been_made">No changes have been made</string>
    <string name="no_note_provided">No note provided</string>
    <string name="no_reports_found">No reports found</string>
    <string name="not_solved_yet">Not solved yet</string>
    <string name="note">Note</string>
    <string name="ok" translatable="false">OK</string>
    <string name="password">Password</string>
    <string name="percentage">&#37;</string>
    <string name="pin">PIN</string>
    <string name="please_fill_all_fields">Please fill in all fields</string>
    <string name="please_verify_your_email">Please verify your email</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="profile">Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="register">Register</string>
    <string name="register_here">Register here</string>
    <string name="remember_me">Remember me</string>
    <string name="remove_photo">Remove photo</string>
    <string name="report_added_successfully">Report added successfully</string>
    <string name="report_updated">Report updated</string>
    <string name="reset_password">Reset password</string>
    <string name="response_unsuccessful_code">Response unsuccessful, code:&#32;</string>
    <string name="save">Save</string>
    <string name="select_file_first">Please select a file first</string>
    <string name="select_photo">Select photo</string>
    <string name="should_have_characters">%s should have %d characters</string>
    <string name="solved_by">Solved by</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="tax_reduction">Tax reduction</string>
    <string name="time">Time</string>
    <string name="unknown">Unknown</string>
    <string name="upload">Upload</string>
    <string name="upload_successful">Upload successful</string>
    <string name="whitespace">&#160;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!-- String arrays -->
    <string-array name="danger_category_names">
        <item>Danger</item>
        <item>Garbage</item>
        <item>Pothole</item>
        <item>Vandalism</item>
    </string-array>
</resources>