<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_my_reports"
            android:title="@string/my_reports" />
        <item
            android:id="@+id/drawer_menu_add_report"
            android:title="@string/add_report" />
        <item
            android:id="@+id/drawer_menu_nearby_dangers"
            android:title="@string/nearby_dangers" />
        <item
            android:id="@+id/drawer_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/drawer_menu_log_out"
            android:title="@string/logout" />
    </group>
</menu>