<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="activity"
            type="com.example.citydangersalertapp.feature.authentication.AuthenticationActivity" />

        <variable
            name="viewModel"
            type="com.example.citydangersalertapp.feature.authentication.forgotpassword.ForgotPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/colorSecondary"
        tools:context=".feature.authentication.forgotpassword.ForgotPasswordFragment">

        <LinearLayout
            android:id="@+id/loginCenterLayout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/ic_input_rounded_border"
                android:backgroundTint="?attr/colorPrimary"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10sp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:text="@={viewModel.userEmail}"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:background="@drawable/rounded_blue_button"
                android:onClick="@{() -> viewModel.resetPasswordHandler(activity, viewModel.userEmail)}"
                android:padding="10sp"
                android:stateListAnimator="@null"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goBackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:onClick="@{() -> viewModel.goBackHandler(activity)}"
                android:text="@string/go_back"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>