<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="activity"
            type="com.example.citydangersalertapp.HomeActivity" />

        <variable
            name="fragmentManager"
            type="androidx.fragment.app.FragmentManager" />

        <variable
            name="editReportViewModel"
            type="com.example.citydangersalertapp.feature.editreport.EditReportViewModel" />

        <variable
            name="homeViewModel"
            type="com.example.citydangersalertapp.feature.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/colorSecondary"
        tools:context=".feature.editreport.EditReportFragment">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/ic_view_blue_border"
                    android:hint="@string/note"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:text="@={editReportViewModel.note}"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:textCursorDrawable="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valueField" />

                <TextView
                    android:id="@+id/solvedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/solved_by" />

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:entries="@array/danger_category_names" />

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:onClick="@{() -> editReportViewModel.reportDateTextClickHandler(fragmentManager)}"
                    android:text="@string/date"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:onClick="@{() -> editReportViewModel.reportTimeTextClickHandler(fragmentManager)}"
                    android:text="@string/time"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/photoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="0sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="?attr/colorPrimary" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/photoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mapContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="20sp"
                    android:visibility="gone">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="0sp"
                        android:background="@color/gold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@color/gold" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="10sp"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="20sp">

                    <Button
                        android:id="@+id/chooseButton"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:background="@drawable/ic_view_blue_border"
                        android:onClick="@{() -> editReportViewModel.cancelHandler(activity)}"
                        android:padding="10sp"
                        android:text="@string/cancel"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/uploadButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/uploadButton"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:background="@drawable/ic_view_blue_border"
                        android:onClick="@{() -> editReportViewModel.saveReportDetailsHandler(activity)}"
                        android:padding="10sp"
                        android:text="@string/save"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/chooseButton"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>