<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.citydangersalertapp.HomeActivity" />

        <variable
            name="fragment"
            type="com.example.citydangersalertapp.feature.addreport.AddReportFragment" />

        <variable
            name="viewModel"
            type="com.example.citydangersalertapp.feature.addreport.AddReportViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/colorSecondary"
        tools:context=".feature.addreport.AddReportFragment">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginVertical="20sp"
                    android:background="@drawable/ic_view_blue_border"
                    android:hint="@string/note"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="10sp"
                    android:text="@={viewModel.reportNote}"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:textCursorDrawable="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valueField" />

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:entries="@array/danger_category_names"
                    android:selectedItemPosition="@={viewModel.reportCategory}" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp">

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:background="@drawable/ic_view_blue_border"
                        android:onClick="@{() -> viewModel.cancelReportHandler(activity)}"
                        android:padding="10sp"
                        android:text="@string/cancel"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/addButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:background="@drawable/ic_view_blue_border"
                        android:onClick="@{() -> viewModel.saveReportHandler(activity, fragment)}"
                        android:padding="10sp"
                        android:text="@string/add"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cancelButton"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>